manifests/blue-green/test-app-v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-v1
  namespace: gitops-demo
  labels:
    app: test-app-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app-v1
  template:
    metadata:
      labels:
        app: test-app-v1
    spec:
      containers:
      - name: springboot
        image: 373127939256.dkr.ecr.us-west-2.amazonaws.com/test-app:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-test-app-v1
  namespace: gitops-demo
spec:
  selector:
    app: test-app-v1
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
