manifests/blue-green/test-app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bluegreen
  namespace: argocd-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.blue-green: |
     {
        type:forward,
        forwardConfig:{
          targetGroups:[
            {
              serviceName:service-test-app-v1,
              servicePort:8080,
              weight:50
            },
            {
              serviceName:service-test-app-v2,
              servicePort:8080,
              weight:50
            }
          ]
        }
     }
  labels:
    app: test-app
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blue-green
              port:
                name: use-annotation
